<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="property_value">Le premier bien immobilier enregistré vaut\u0020</string>
    <string name="toolbar_add">Add</string>
    <string name="add_fragment_label">New Estate</string>
    <string name="add_estate_headline">Estate</string>
    <string name="add_type">Type</string>
    <string name="add_price">Price</string>
    <string name="add_surface">Surface (m²)</string>
    <string name="add_rooms">Rooms</string>
    <string name="add_bedrooms">Bedrooms</string>
    <string name="add_bathrooms">Bathrooms</string>
    <string name="add_description">Description</string>
    <string name="add_location_headline">Location</string>
    <string name="add_address">Address</string>
    <string name="add_district">District</string>
    <string name="add_vicinity_headline">Vicinity</string>
    <string name="add_vicinity">In the vicinity…</string>
    <string name="add_info_headline">Information</string>
    <string name="add_status">Status</string>
    <string name="add_realtor">Realtor</string>
    <string name="add_market_entry_date">Market entry</string>
    <string name="add_sale_date">Date of sale</string>
    <string name="add_media">Media</string>
    <string name="add_fab">Fab to add new estate to the list</string>
    <string name="price">$%1$s</string>
    <string name="update_fab">Fab to validate estate\'s new info</string>
    <string name="update_fragment_label">Update Information</string>
    <string name="detail_fab">Fab to update estate\'s info</string>
    <string name="detail_description_headline">Description</string>
    <string name="detail_about_headline">About</string>
    <string name="detail_surface">Surface: %1$sm²</string>
    <string name="detail_rooms">Number of rooms: %1$s</string>
    <string name="detail_bedrooms">Number of bedrooms: %1$s</string>
    <string name="detail_bathrooms">Number of bathrooms: %1$s</string>
    <string name="detail_realtor">Realtor: %1$s</string>
    <string name="detail_status">Status: %1$s</string>
    <string name="detail_entry_date">Market entry: %1$s</string>
    <string name="detail_sale_date">Date of sale: %1$s</string>
    <string name="detail_vicinity">Points of interest in the vicinity:</string>
    <string name="date_picker_entry">Select estate\'s date of market entry</string>
    <string name="date_picker_sale">Select estate\'s date of sale</string>
    <string name="no_date_selected">No date selected</string>
    <string name="not_sold">Not sold yet</string>
    <string name="notification_channel_title">Notification channel</string>
    <string name="notification_channel_description">Notification sent to user after creation of new estate</string>
    <string name="notification_title">New estate added</string>
    <string name="notification_description">Estate creation successful</string>
    <string name="notification_description_long">The estate you have just created has been successfully added to the database</string>
    <string name="add_camera_btn">Camera</string>
    <string name="add_gallery_btn">Gallery</string>
    <string name="bn_list">List</string>
    <string name="bn_map">Map</string>
    <string name="bn_search">Search</string>
    <string name="bn_sim">Sim</string>
    <string name="sim_loan_amount">Loan Amount:</string>
    <string name="sim_interest_rate">Interest Rate:</string>
    <string name="sim_years">Years</string>
    <string name="sim_emi">EMI</string>
    <string name="sim_total_amount">Total Amount</string>
    <string name="sim_0">0.00</string>
    <string name="sim_5">5</string>
    <string name="sim_10">10</string>
    <string name="sim_15">15</string>
    <string name="sim_20">20</string>
    <string name="sim_25">25</string>
    <string name="sim_30">30</string>
    <string name="sim_5p">5%</string>
    <string name="sim_percent">%s%%</string>
    <string name="alert_dialog_title">Add a photo caption</string>
    <string name="error_type">Estate\'s type required</string>
    <string name="error_price">Estate\'s price required</string>
    <string name="error_address">Estate\'s address required</string>
    <string name="error_district">Estate\'s district required</string>
    <string name="error_photo">Please upload at least one photo</string>
    <string name="error_status">Please select a date of sale</string>
    <string name="error_entry_date">Please select a date of market entry</string>
    <string name="error_sale_date">Please update estate\'s status</string>
    <string name="error_status_search">Estate\'s status required</string>
    <string name="error_surface_min">Minimum surface required</string>
    <string name="error_surface_max">Maximum surface required</string>
    <string name="error_rooms_min">Minimum no. of rooms required</string>
    <string name="error_rooms_max">Maximum no. of rooms required</string>
    <string name="error_price_min">Minimum price required</string>
    <string name="error_price_max">Maximum price required</string>
    <string name="error_availability_date">Please select a date of availability</string>
    <string name="search_fab">Fab to launch search</string>
    <string name="search_title">Your search criteria</string>
    <string name="search_minimum">Minimum</string>
    <string name="search_maximum">Maximum</string>
    <string name="search_rooms">No. of rooms</string>
    <string name="search_price">Price ($)</string>
    <string name="search_date">Availability date</string>
    <string name="search_results">Your search results</string>
    <string name="search_start_date">Availability date</string>
    <string name="search_no_result">No match found</string>
    <string name="search_result_msg">"%1$d result(s) found</string>

    <string-array name="types">
        <item>Condo</item>
        <item>Duplex</item>
        <item>Flat</item>
        <item>House</item>
        <item>Loft</item>
        <item>Mansion</item>
        <item>Triplex</item>
        <item>Villa</item>
    </string-array>
    <string-array name="status">
        <item>Vacant</item>
        <item>Sold</item>
    </string-array>
</resources>
