<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/bn_list" />
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bn_map" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bn_search" />
    <item
        android:id="@+id/simFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_24"
        android:title="@string/bn_sim" />
</menu>