<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/listFragment">
    <fragment
        android:id="@+id/addFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.add.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.update.UpdateFragment"
        android:label="@string/update_fragment_label"
        tools:layout="@layout/fragment_update" >
        <argument
            android:name="currentEstate"
            app:argType="com.openclassrooms.realestatemanager.data.model.Estate" />
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.detail.DetailFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="currentEstate"
            app:argType="com.openclassrooms.realestatemanager.data.model.Estate" />
        <action
            android:id="@+id/action_detailFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.list.ListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.map.MapFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.search.SearchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/simFragment"
        android:name="com.openclassrooms.realestatemanager.ui.fragment.sim.SimFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_sim" />
</navigation>